--- a/.env.example
+++ b/.env.example
@@ -7,20 +7,32 @@ FAISS_DB_PATH=/tmp/faiss_db
 # Configuración del modelo de embeddings
 EMBEDDINGS_MODEL_NAME=paraphrase-MiniLM-L6-v2
 
-# Configuración del modelo de lenguaje
-LLM_MODEL_NAME=deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B
-
 # Configuración del text splitter
 CHUNK_SIZE=500
 CHUNK_OVERLAP=100
 
 # Configuración del retriever
 RETRIEVAL_K=4
-
-# Configuración del pipeline de generación
-MAX_NEW_TOKENS=150
 TEMPERATURE=0.7
-DO_SAMPLE=true
 
 # Configuración de logging
 LOG_LEVEL=INFO
+
+# ====================
+# TRANSFORMERS
+# ====================
+
+# Configuración del modelo de lenguaje
+LLM_MODEL_NAME=deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B
+
+# Configuración del pipeline de generación
+MAX_NEW_TOKENS=150
+DO_SAMPLE=true
+
+# ====================
+# OLLAMA
+# ====================
+
+# Configuración del modelo de lenguaje (Ollama)
+OLLAMA_MODEL_NAME=deepseek-r1:1.5b
+OLLAMA_BASE_URL=http://localhost:11434
